# spec-bioimage-io

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  NormalizeZeroMeanUnitVariance.md  NormalizeZeroMeanUnitVariance.transform.yaml  NormalizeZeroMeanUnitVariance.transformation.yaml  README.md  UNet2dExample.model.yaml  bioimage_manifest.yaml  bioimageio_model_spec.md  bioimageio_rdf_spec.md  bioimageio_schema.json  bioimageio_schema_application_0.2.json  bioimageio_schema_application_latest.json  bioimageio_schema_dataset_0.2.json  bioimageio_schema_dataset_0.3.json  bioimageio_schema_generic_0.2.json  bioimageio_schema_generic_0.3.json  bioimageio_schema_latest.json  bioimageio_schema_model_0.4.json  bioimageio_schema_model_0.5.json  bioimageio_schema_model_latest.json  bioimageio_schema_notebook_0.2.json  bioimageio_schema_notebook_0.3.json  bioimageio_schema_v0-5-0.json  bioimageio_schema_v0-5-0post1.json  bioimageio_schema_v0-5-0post2.json  bioimageio_schema_v0-5-1.json  bioimageio_schema_v0-5-1post1.json  bioimageio_schema_v0-5-2.json  bioimageio_schema_v0-5-2post1.json  bioimageio_schema_v0-5-2post2.json  bioimageio_schema_v0-5-2post3.json  bioimageio_schema_v0-5-2post4.json  bioimageio_schema_v0-5-2post5.json  bioimageio_schema_v0-5-3post1.json  (+61 more)
.github/: copilot-instructions.md
bioimageio/: spec.html
conda-recipe/: meta.yaml  recipe.yaml
core/: __init__.py  parser.py  train.py  transforms.py
coverage/: class_index.html  function_index.html  index.html  status.json  z_0703eb9a8d100bed___init___py.html  z_1350a46101febd70___init___py.html  z_1350a46101febd70__v0_2_converter_py.html  z_1350a46101febd70__v0_3_converter_py.html  z_1350a46101febd70_v0_2_py.html  z_1350a46101febd70_v0_3_py.html  z_1c4542853008dd07___init___py.html  z_1c4542853008dd07_v0_2_py.html  z_1c4542853008dd07_v0_3_py.html  z_6eb2f4490968ce7f___init___py.html  z_6eb2f4490968ce7f__description_impl_py.html  z_6eb2f4490968ce7f__description_py.html  z_6eb2f4490968ce7f__get_conda_env_py.html  z_6eb2f4490968ce7f__hf_card_py.html  z_6eb2f4490968ce7f__hf_py.html  z_6eb2f4490968ce7f__io_py.html  z_6eb2f4490968ce7f__package_py.html  z_6eb2f4490968ce7f__pretty_validation_errors_py.html  z_6eb2f4490968ce7f__upload_py.html  z_6eb2f4490968ce7f__version_py.html  z_6eb2f4490968ce7f_common_py.html  z_6eb2f4490968ce7f_conda_env_py.html  z_6eb2f4490968ce7f_pretty_validation_errors_py.html  z_6eb2f4490968ce7f_summary_py.html  z_6eb2f4490968ce7f_utils_py.html  z_7c461fd3866d8843___init___py.html  z_7c461fd3866d8843__v0_2_converter_py.html  z_7c461fd3866d8843__v0_3_converter_py.html  z_7c461fd3866d8843_v0_2_py.html  z_7c461fd3866d8843_v0_3_py.html  z_85344614e6dfc2bc___init___py.html  z_85344614e6dfc2bc_v0_2_py.html  z_85344614e6dfc2bc_v0_3_py.html  z_8b355a6314ca24cb___init___py.html  z_8b355a6314ca24cb_v0_2_py.html  z_8b355a6314ca24cb_v0_3_py.html  (+92 more)
dev/: 404.html  env.yaml  index.html  objects.inv  sitemap.xml
docs/: api.md  development.md  index.md
example/: create_cellpose_description.ipynb  dataset_creation.ipynb  load_model_and_create_your_own.ipynb  load_plantseg_models.ipynb  push_to_hub_example.py
example_descriptions/: examples.md
example_specs/: rdf-examples.md
example_use/: load_model_and_create_your_own.ipynb
json_schema_gui_v0-5/: index.html
models/: UNet2dExample.model.yaml  nuclei_dataset.py  sample-input.tif  sample-output.tif  test-input.npy  test-output.npy  train.py  unet2d.py
readers/: nN5.reader.yaml
samplers/: RandomBatch.sampler.yaml
scripts/: bio-rdf-validator.imjoy.html  compare_yaml_syntax.py  docs_utils.py  gen_spec_doc.py  generate_api_doc_pages.py  generate_docs.py  generate_dtype_limits.py  generate_json_schema.py  generate_json_schema_documentation.py  generate_json_schema_gui.py  generate_json_schemas.py  generate_json_specs.py  generate_passthrough_modules.py  generate_processing_docs.py  generate_rdf_docs.py  generate_spdx_licenses.py  generate_spec_documentation.py  generate_specific_json_schemas.py  generate_sphix_docs.py  generate_version_submodule_imports.py  generate_weight_formats_docs.py  generate_weight_formats_overview.py  generate_weights_format_docs.py  generate_weights_formats_overview.py  report_invalid_rdfs.py  update_spdx_licenses.py  update_spdx_licenses_zenodo.py  write_json_schema.py
tests/: conftest.py  old_test_commands.py  old_test_dump_spec.py  old_test_format_version_conversion.py  old_test_raw_nodes.py  old_test_schema_model.py  old_test_schemas_input_output_tensors.py  old_test_validation_errors.py  test_base_nodes.py  test_bioimageio_collection.py  test_build_spec.py  test_cli.py  test_commands.py  test_commands_with_collection.py  test_description.py  test_dump_spec.py  test_example_specs.py  test_export_package.py  test_fields.py  test_flatten_source.py  test_format_version_conversion.py  test_get_conda_env.py  test_hf.py  test_io.py  test_licenses.py  test_load_rdf.py  test_load_spec.py  test_node_transformer.py  test_package.py  test_raw_load_resource_description.py  test_raw_nodes.py  test_raw_nodes_match_schema.py  test_schema.py  test_schema_model.py  test_schemas.py  test_schemas_input_output_tensors.py  test_schemas_processing.py  test_specific_reexports_generics.py  test_sub_schemas.py  test_summary.py  (+8 more)
transformations/: BCELoss.transformation.yaml  NormalizeZeroMeanUnitVariance.transformation.yaml  Sigmoid.md  Sigmoid.transformation.yaml  transforms.py
user_docs/: application_descr_latest.md  application_descr_v0-2-4.md  application_descr_v0-2.md  application_descr_v0-3-0.md  application_descr_v0-3.md  collection_descr_latest.md  collection_descr_v0-2-4.md  collection_descr_v0-2.md  collection_descr_v0-3-0.md  collection_descr_v0-3.md  dataset_descr_latest.md  dataset_descr_v0-2-4.md  dataset_descr_v0-2.md  dataset_descr_v0-3-0.md  dataset_descr_v0-3.md  generic_descr_latest.md  generic_descr_v0-2-4.md  generic_descr_v0-2.md  generic_descr_v0-3-0.md  generic_descr_v0-3.md  model_descr_latest.md  model_descr_v0-4-10.md  model_descr_v0-4.md  model_descr_v0-5-0.md  (+11 more)
(+962 files in other folders)
