[tool.poetry]
name = "biospec"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pydantic = {version = ">=2.0.1"}
packaging = {version = ">=17.0"}
ruamel-yaml = "^0.18.5"
deepdiff = "^6.7.1"
email-validator = "^2.1.0.post1"
python-dateutil = "^2.8.2"
annotated-types = "^0.6.0"
typing-extensions = "^4.8.0"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
black = "^23.11.0"
pyright = "^1.1.336"
pooch = "^1.8.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
