[tool.poetry]
name = "bioimageio"
version = "0.5.0"
description = ""
authors = ["Bioimage.IO Contributors"]
packages = [{include = "bioimageio" }]


[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pydantic = {version = ">=2.0.1"}
packaging = {version = ">=17.0"}
ruamel-yaml = "^0.18.5"
deepdiff = "^6.7.1"
email-validator = "^2.1.0.post1"
python-dateutil = "^2.8.2"
annotated-types = "^0.6.0"
typing-extensions = "^4.8.0"
lxml = "^4.9.3"
torch = "^2.1.1"

pytest-cov = {version="^4.1.0", optional = true}
black = {version="^23.11.0", optional = true}
pyright = {version="^1.1.336", optional = true}
pooch = {version="^1.8.0", optional = true}
pre-commit = {version="^3.5.0", optional = true}
pytest = {version="^7.4.3", optional = true}
marshmallow = "^3.20.1"
marshmallow-union = "^0.1.15.post1"
typer = "^0.9.0"

[tool.poetry.extras]
test = ["pytest-cov", "black", "pyright", "pooch", "pre-commit", "pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']


[tool.poetry.scripts]
bioimageio = "bioimageio.spec.__main__:app"