[metadata]
name = bioimageio.spec
description = Parser and validator library for BioImage.IO specifications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bioimage-io/spec-bioimage-io
author = Bioimage Team
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Reports = https://github.com/bioimage-io/spec-bioimage-io/issues
    Source = https://github.com/bioimage-io/spec-bioimage-io

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = true
install_requires =
    PyYAML>=5.2
    imageio>=2.5
    importlib_metadata
    marshmallow>=3.6.0,<4.0
    marshmallow-jsonschema
    marshmallow-union
    requests
    ruamel.yaml
    typer
    typing-extensions

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    tox
    torch
    numpy
    mypy
dev =
    pre-commit

[options.entry_points]
console_scripts =
    bioimageio = bioimageio.spec.__main__:app

# flake8 does not support pyproject.toml yet.
[flake8]
max-line-length = 120
